add block consultation with feed-form

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
 
     <section class='advantages'>
         <div class="container">
-            <h2 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h2>
+            <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__items">
                 <div class="advantages__item">
                     <img src="icons/advantages/cup.png" alt="cup">
@@ -72,6 +72,19 @@
                     <div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <span>I LOVE RUNNING</span>.</div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="consultation">
+        <div class="container">
+            <div class="title title_consultation">Получите бесплатную консультациюпо подбору пульсометра </div>
+            <div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="feed-form">
+                <input name="name" required type="text" placeholder="Ваше имя">
+                <input name="phone" required type="tel" placeholder="Ваш телефон">
+                <input name="" required type="email" placeholder="Ваш E-mail">
+                <button class="button button_consultation">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
         </div>
     </section>
 </body>
