--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run Smart</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/tiny-slider.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -87,5 +88,21 @@
             </form>
         </div>
     </section>
+
+
+    <section class="carousel">
+        <div class="container">
+            <div class="carousel__inner">
+                <div><img src="icons/slider/slide_1.png" alt="image"></div>
+                <div><img src="icons/slider/slide_2.png" alt="image"></div>
+                <div><img src="icons/slider/slide_3.png" alt="image"></div>
+            </div>
+            <button type="button" class="prev"><img src="icons/left.png" alt=""></button>
+            <button type="button" class="next"><img src="icons/right.png" alt=""></button>
+        </div>
+    </section>
+
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
